Requires:
~~~~~~~~~
- CMF 1.5.5
New features:
~~~~~~~~~~~~~
- Better ConflictError logging (from Zope 2.9).
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Do not support Zope-2.7.x for the ZODB patch